fix: bottom sheet overflow

--- a/src/app/components/bottom-pane/bottom-pane.component.scss
+++ b/src/app/components/bottom-pane/bottom-pane.component.scss
@@ -55,19 +55,15 @@
   width: 100%;
   max-width: 968px;
   height: 100%;
-  max-height: 90%;
+  max-height: 80%;
   color: black;
   background-color: white;
   border-top-left-radius: $spacing--lg;
   border-top-right-radius: $spacing--lg;
-  padding: 0 $spacing--lg 0;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   transform: translateY(102%);
   visibility: hidden;
-  @include breakpoint(md) {
-    padding: 0 $spacing--xl 0;
-  }
+
   &::before {
     content: '';
     position: absolute;
@@ -82,18 +78,41 @@
 
   &__header {
     position: relative;
+    z-index: 1;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 44px;
-    margin-top: $spacing--md;
   }
 
   &__content {
-    position: relative;
-    padding-top: $spacing--lg;
+    position: absolute;
+    border-radius: inherit;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    padding: $spacing--lg $spacing--lg 0;
     padding-right: 44px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    @include breakpoint(md) {
+      padding: $spacing--xl $spacing--xl 0;
+      padding-right: 44px;
+    }
+    /* Works on Chrome, Edge, and Safari */
+    &::-webkit-scrollbar {
+      width: auto;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: color(forest);
+      border-radius: 20px;
+      border: 2px solid white;
+    }
   }
 
   &-handle {
@@ -122,6 +141,7 @@
   font-weight: font-weight('bold');
   font-size: $subtitle;
   margin: 0;
+  margin-top: $spacing--md;
   @include breakpoint(md) {
     font-size: $subtitle--2;
   }
@@ -129,7 +149,6 @@
 
 .close-btn {
   position: absolute;
-  margin-top: $spacing--md;
   top: $spacing--lg;
   right: $spacing--sm;
   display: flex;
@@ -139,6 +158,7 @@
   height: 44px;
   width: 44px;
   border-radius: 100%;
+  background-color: transparent;
   transition: color 320ms ease;
   transition: background 320ms ease;
   @include breakpoint(md) {
