--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -49,7 +49,6 @@
   height: 44px;
   width: 44px;
   border-radius: 100%;
-  outline: none;
   transition: color 320ms ease;
   transition: background 320ms ease;
   &:hover,
